--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <tomcat-version>8.5.20</tomcat-version>
 
         <!-- SB 1.5 -->
         <spring-boot.bom.version>1.5.8.Final</spring-boot.bom.version>
@@ -35,6 +36,22 @@
 
     <dependencyManagement>
         <dependencies>
+    <!-- Tomcat -->
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>${tomcat-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-el</artifactId>
+      <version>${tomcat-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-websocket</artifactId>
+      <version>${tomcat-version}</version>
+    </dependency>
             <!-- Spring Boot 1.5 -->
             <dependency>
                 <groupId>me.snowdrop</groupId>
